@@ -1,3 +1,8 @@
+Fri Apr  9 12:04:19 2004  Tim Janik  <timj@gtk.org>
+
+	* tests/testwavechunk.c (run_tests): allocate large structures on the
+	heap, not the stack. based on a patch by Rasmus Kaj <kaj@e.kth.se>.
+
 Sat Mar  6 12:17:46 2004  Tim Janik  <timj@gtk.org>
 
 	* bsecore.idl: remove gconfig option synth_block_size, added 
